Fix bug where controls container was collapsing

--- a/app/styles/_controls.scss
+++ b/app/styles/_controls.scss
@@ -4,6 +4,7 @@
   border-top: solid 1px #234;
   background-color: #456;
   font-size: 0;
+  white-space: nowrap;
 }
 
 .navigation-controls {
